# barbershop-api-python

./: README.md  alembic.ini  main.py  pyproject.toml  requirements.in  requirements.txt
app/: config.py
app/controller/: customer.py  health.py  product.py  store.py  transaction.py
app/database/: client.py
app/dependencies/: database.py
app/dependency/: database.py  exception.py
app/entities/: base.py  capster.py  product.py  store.py  user.py
app/exceptions/: base.py  base_exception.py  token.py  user_exception.py
app/helper/: database.py  generator.py  response.py  token.py
app/models/: capster.py  product.py  store.py  store_capster.py  transaction.py  user.py  verification.py
app/repositories/: interface.py  product.py  store.py  user.py
app/schemas/: base.py  customer.py  health.py  product.py  store.py  user.py
app/seedings/: store.py
app/services/: customer.py  product.py  store.py
migrations/: env.py
migrations/versions/: 2024_07_14_add_table_product.py  2024_07_14_add_table_user.py  2024_08_04_add_table_store.py  2024_08_04_add_table_store_capster.py  2024_10_25_add_table_transaction.py  2024_10_27_add_table_verification.py  2025_01_04_add_field_store_code_in_table_store.py  2025_01_08_add_field_store_verification_code_at_table_.py  2ccf18e6759b_create_table_user.py
