[project]
name = "barbershop-api-python"
version = "0.1.0"
description = "this project for membership app barbershop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.3",
    "passlib>=1.7.4",
    "psycopg>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "orjson>=3.10.10",
    "faker>=30.8.1",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.5",
    "ruff>=0.7.1",
]
