[project]
name = "barbershop-api-python"
version = "0.1.0"
description = "this project for membership app barbershop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.3",
    "passlib>=1.7.4",
    "psycopg>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.9.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
    "orjson>=3.10.10",
    "faker>=30.8.1",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.5",
    "ruff>=0.7.1",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
